# v4vapp-backend-v2

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE  README.md  balance_sheet.rtf  blocker.pf.conf  docker-compose-monitor.yaml  docker-compose.yaml  plan-ledgerCacheKey.prompt.md  plan-ledgerCheckpoints.prompt.md  pre-commit-config.yaml  pyproject.toml  release_notes.md  run_admin_tests.py  test_precommit.env  transaction_flow.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docker_publish.yml  pytest.yml  template-check.yml
coding_help/: 2025-12-15-binance-accounting-fixes.md
coding_help/balance-sheet-discrepancy-investigation/: complete_financial_report_2025-12-16_10-00-52.txt  findings_and_notes.md  v4vapp-dev.ledger.json
coding_help/sats-balance-in-devse.v4vapp-account/: balance_report_VSC_Liability_v4vapp.qrc_20251216_124000.txt  complete_financial_report_2025-12-16_14-41-43.txt  complete_financial_report_2025-12-21_17-59-14.txt  summary_of_negative_sats.md  v4vapp-dev.ledger12-16-14-41.json
coding_help/sats-to-hbd-problem/: complete_financial_report_2025-12-20_15-13-36.txt  v4vapp-dev.ledger.json
config/: config.yaml  sample_config.yaml
config/logging/: 2-stderr-json-file.json  5-queued-stderr-json-file.json
docs/: CLAUDE.md  balance-adjustment.md  balance_sheet_and_ledgers.pages  balance_sheet_and_ledgers.rtf  binance_convert_swap_adapter.md  custom_json.md  deposit_hive_to_keepsats.pages  deposit_hive_to_keepsats.rtf  development_mode.md  error_code_manager.md  exchange_rebalance.md  expense_accounts.md  fixed_quote.md  hive_to_lnd_payment.pages  hive_transfers.md  ledger_balance_cache.md  log_rotation_and_namer.md  logging_system.md  magisats.md  nectar_changes.md  trading_pnl.md
docs/end to end process tracking/: overwatch-system-plan.md  research-report.md
docs/overwatch system end to end process tracking/: overwatch-system.md  plan-overwatchSystem.prompt.md
docs/plans/: ledger_checkpoints_plan.md
logging_configs/: 2-stderr-json-file.json  5-queued-stderr-json-file.json
sample_output/: complete_financial_report_2025-08-30_18-18-03.txt
scripts/: __init__.py  convert_rates_to_timeseries.py  find_ledger_type_usage.py  script_archive_ledger_entries.py  script_flip_exc_conv_entries.py  script_load_prior_keepsats_balances.py  tailjlogs.py  test_binance_swap.py  validate_jinja_templates.py
scripts/keepsats_data/: v4vapp_voltage.keepsats_with_in_progress.json
src/: api_v2.py  backend_api_v2.py  binance_monitor.py  context_manager.py  db_monitor.py  dest_alias_fill.py  destination_alias_lookup.py  docker_shutdown_detect.py  event_tracking_main.py  health_check.py  hive_monitor_v2.py  invoice_experiments.py  lnd_monitor_v2.py  lnd_node_monitor.py  magi_monitor.py  main.py  notification_bot_setup.py  stream_logs.py  telegram_bot_setup.py  template_app.py  unprettify_json_log.py
src/jupyter/: account_from_mongodb.ipynb  check_conv_dates.ipynb  check_limits.py  dev_create_transactions.ipynb  dev_db_helpers.ipynb  hive_rates.ipynb  ledger_entries.ipynb  rate_combined_conversion.ipynb  script_load_prior_keepsats_balances.py  send_bulk_custom_json.py  send_custom_json_script.py  sending_transactions.py  sending_transactions_test_scripts.py  temp_balance_sheet.py
src/status/: __init__.py  status_api.py
src/v4vapp_backend_v2/: __init__.py
tests/: conftest.py  create_hive_test_data.py  get_last_quote.py  load_data.py  setup_quote.py  template_file_tests.py  test_admin_config.py  test_admin_interface.py  test_admin_templates.py  test_db_monitor.py  test_hive_extras_keys_type.py  test_ledger_type_details.py  test_lnd_balance_models.py  test_lnd_grpc_connect.py  test_pending_for_ledger_inclusion_cleanup.py  test_templates.py  test_tracked_any_decimal128.py  test_tracked_forward_models_decimal128.py  utils.py
tests/accounting/: test_account_balance_contra.py  test_account_balances.py  test_balance_sheet.py  test_check_limits.py  test_ledger_cache.py  test_ledger_checkpoints.py  test_ledger_entries_sort.py  test_ledger_entry.py  test_ledger_type_details.py  test_sanity_checks.py  test_sanity_checks_hive.py  test_sanity_checks_logging.py  test_trading_pnl.py  test_trading_pnl_async.py
tests/actions/: pause_test_hive_to_lightning_live_lightning_node.py  pause_test_process_tracked_events.py  pause_test_tracked_all.py  test_cust_id_locks.py  test_forward_logging.py  test_full_stack.py  test_hive_send_failures.py  test_hive_to_lightning.py  test_hive_to_lightning_depreciate.py  test_hive_to_lightning_live_lightning_node.py  test_individual_transactions.py  test_lnurl_decode.py  test_load_process_events.py  test_process_tracked_events.py  test_tracked_all.py  test_tracked_any.py  test_tracked_models_nearest.py
tests/admin/: test_data_helpers.py  test_v4vconfig_admin.py
tests/admin_interface/: template_file_tests.py  test_admin_config.py  test_admin_interface.py  test_admin_templates.py  test_ledger_editor_api.py  test_ledger_entries_api.py  test_templates.py
tmp/: fix_lnd_monitor.py  keysend_test.sh  temp.html
(+468 files in other folders)
