[tool.poetry]
name = "v4vapp-backend-v2"
version = "0.1.0"
description = "Back End for the V4V.app bridge from Hive to Lightning"
authors = ["Brian of London (home imac) <brian@v4v.app>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.63.0"
grpcio-tools = "1.62.0"
googleapis-common-protos = "1.62.0"
mypy-protobuf = "^3.6.0"
pydantic = "^2.7.1"
colorlog = "^6.8.2"
backoff = "^2.2.1"
single-source = "^0.3.0"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20240917"
httpx = "^0.27.2"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
types-pyyaml = "^6.0.12.20240917"
types-toml = "^0.10.8.20240310"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
