[tool.poetry]
name = "v4vapp-backend-v2"
version = "0.1.0"
description = "Back End for the V4V.app bridge from Hive to Lightning"
authors = ["Brian of London (home imac) <brian@v4v.app>"]
license = "MIT"
readme = "README.md"

# Add this line to disable package mode
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.63.0"
grpcio-tools = "1.62.0"
googleapis-common-protos = "1.62.0"
mypy-protobuf = "^3.6.0"
pydantic = "^2.7.1"
colorlog = "^6.8.2"
backoff = "^2.2.1"
single-source = "^0.3.0"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20240917"
httpx = "^0.27.2"
toml = "^0.10.2"
typer = "^0.15.1"
motor = "^3.7.0"
aiofiles = "^24.1.0"
watchdog = "^6.0.0"
asgiref = "^3.8.1"
lighthive = "^0.4.3"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.23.7"
types-pyyaml = "^6.0.12.20240917"
types-toml = "^0.10.8.20240310"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
black = "^25.1.0"
mongomock-motor = "^0.0.35"
pytest-mock = "^3.14.0"
types-aiofiles = "^24.1.0.20241221"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
